[package]
name = "bottalks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
dotenv = "0.15.0"
home = "0.5.3"
reqwest = "0.11.7"
roux = "1.3.7"
rust-bert = "0.16.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tch = "~0.5.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
